--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://vaibhavi-prajapati.github.io/TaxFilingApplicationFrontend",
+    "homepage": "https://vaibhavi-prajapati.github.io/",
     "name": "taxfrontend2",
     "version": "0.1.0",
     "private": true,
